Fri Oct  5 18:45:48 UTC 2007  Ossama Othman  <ossama_othman at symantec dot com>

        * ace/Atomic_Op_T.inl (ACE_Atomic_Op_Ex, operator=):

          Implement the assignment operator in terms of the copy
          constructor, not the other way around.  This (1) allows one less
          lock to be held during copy construction, (2) allows for finer
          grained locking during copy assignment, and (3) allows the
          copy assignment operator to be implemented in a strongly
          exception safe manner.

          (operator==, operator>=, operator>, operator<=, operator<):
          (value):

          Removed casts that removed const-ness of the mutex_ member.
          They aren't necessary in this case.

        * ace/Atomic_Op_T.cpp:

          Only include "ace/Log_Msg.h" if ACE_HAS_DUMP is defined.  It
          isn't needed otherwise.

        From Russell Mora
        * ace/Atomic_Op_T.h:
        * ace/Atomic_Op_T.inl:
        * ace/Atomic_Op_T.cpp:

          Parameterized argument types using type traits.  Avoids warnings
          about references being taken of temporaries for built-in types.

Fri Oct  5 12:20:00 UTC 2007  Simon Massey  <sma@prismtech.com>

        * ace/config-lynxos.h:

          Updated for 4.0 -> 4.2.

Wed Oct  3 19:31:15 UTC 2007  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/Acceptor.cpp
        * ace/Acceptor.h
        * ace/ATM_Connector.h
        * ace/Cached_Connect_Strategy_T.h
        * ace/Caching_Strategies_T.h
        * ace/Caching_Strategies_T.inl
        * ace/Connector.cpp
        * ace/Connector.h
        * ace/Countdown_Time.h
        * ace/DEV_Connector.h
        * ace/Dev_Poll_Reactor.cpp
        * ace/Dev_Poll_Reactor.h
        * ace/Dirent.h
        * ace/Event_Handler.h
        * ace/FILE_Connector.h
        * ace/Future.h
        * ace/Future_Set.cpp
        * ace/Future_Set.h
        * ace/Handle_Set.h
        * ace/Hash_Map_Manager_T.h
        * ace/Local_Name_Space.cpp